--- a/mysite/frontend-ui/src/pages/Home/less/antMotionStyle.less
+++ b/mysite/frontend-ui/src/pages/Home/less/antMotionStyle.less
@@ -1,11 +1,13 @@
-@import './common.less';
-@import './custom.less';
-@import './content.less';
-@import './nav0.less';
-@import './banner2.less';
-@import './content0.less';
-@import './content1.less';
-@import './content3.less';
-@import './teams0.less';
-@import './footer2.less';
-@import './edit.less';
+:global {
+    @import './common.less';
+    @import './custom.less';
+    @import './content.less';
+    @import './nav0.less';
+    @import './banner2.less';
+    @import './content0.less';
+    @import './content1.less';
+    @import './content3.less';
+    @import './teams0.less';
+    @import './footer2.less';
+    @import './edit.less';
+}
